# rust-sandbox

./: .rustfmt.toml  .sqruff  .taplo.toml  Cargo.toml  compose.yaml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: anti-virus.yaml  audit.yaml  build.yaml  cache.yaml  cargo.yaml  dependabot.yaml  github-actions.yaml  protobuf.yaml  sql.yaml  toml.yaml  typo.yaml
migrations/user/: 20250126070829_init.up.sql
trait-repository/: Cargo.toml
trait-repository/src/: lib.rs
trait-usecase/: Cargo.toml
trait-usecase/src/: lib.rs
user-app/: Cargo.toml
user-app/src/: handler.rs  main.rs
user-model/: Cargo.toml
user-model/src/: lib.rs  user.rs  user_id.rs
user-proto/: Cargo.toml  build.rs
user-proto/src/: lib.rs
user-proto/user/v1/: model.proto  query_users_by_ids.proto  service.proto
user-repository/: Cargo.toml
user-repository/queries/: query_users_by_ids.sql
user-repository/src/: lib.rs  query_users_by_ids.rs
user-usecase/: Cargo.toml
user-usecase/src/: query_users_by_ids.rs
