[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
strip = true

[workspace]
members = ["trait-repository", "trait-usecase"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.95"
sqlx = "0.8.3"
trait-repository.path = "trait-repository"
trait-usecase.path = "trait-usecase"

[workspace.lints.clippy]
all = "warn"

[workspace.package]
edition = "2021"
version = "0.0.0"
