[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
strip = true

[workspace]
members = ["trait-repository", "trait-usecase", "user-model", "user-repository"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.95"
derive-new = "0.7.0"
sqlx = "0.8.3"
trait-repository.path = "trait-repository"
trait-usecase.path = "trait-usecase"
user-model.path = "user-model"
user-proto.path = "user-proto"
user-repository.path = "user-repository"
uuid = "1.12.1"

[workspace.lints.clippy]
all = "warn"

[workspace.package]
edition = "2021"
version = "0.0.0"
