[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
strip = true

[workspace]
members = [
  "trait-repository",
  "trait-usecase",
  "user-app",
  "user-model",
  "user-proto",
  "user-repository",
  "user-usecase",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.100"
derive-new = "0.7.0"
envy = "0.4.2"
prost = "0.14.1"
prost-build = "0.13.5"
prost-types = "0.13.5"
serde = "1.0.228"
sqlx = "0.8.6"
tokio = "1.48.0"
tonic = "0.14.2"
tonic-build = "0.14.2"
tonic-reflection = "0.14.2"
trait-repository.path = "trait-repository"
trait-usecase.path = "trait-usecase"
user-model.path = "user-model"
user-proto.path = "user-proto"
user-repository.path = "user-repository"
user-usecase.path = "user-usecase"
uuid = "1.18.1"

[workspace.lints.clippy]
all = "warn"

[workspace.package]
edition = "2021"
version = "0.0.0"
