[package]
edition.workspace = true
name = "user-proto"
version.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
tonic.workspace = true

[build-dependencies]
anyhow.workspace = true
prost-build.workspace = true
tonic-build.workspace = true

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["prost", "serde"]
